Fri Mar 23 21:57:44 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
          Generated some documentation into the executor header, mostly
          using @copydoc to copy the documentation from the IDl file

Fri Mar 23 21:09:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_setarg_type.cpp:
          Add missing ::

Fri Mar 23 20:36:31 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
          Fixed bugzilla 4009, problem generating the CCM executor when
          we have an attribute of type sequence included from another file

Fri Mar 23 18:18:30 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any_SystemException.cpp:
        * tao/CSD_Framework/CSD_Strategy_Repository.cpp:
          Initialize pointer to 0

        * tao/CodecFactory/IOP_Codec.pidl:
          removed old comments

        * tao/Profile.cpp:
          layout changes

Fri Mar 23 13:30:00 UTC 2012  Simon Massey  <simon dot massey at prismtech dot com>

        * NEWS:
          Stated ZIOP now working on the return path.

        * tests/ZIOP/TestCompressor_Factory.h:
          Moved the COMPRESSORID_FOR_TESTING to another unknown slot (100) as
          the original 10 is now COMPRESSOR_RLE.

        * tao/ZIOP/ZIOP.cpp:
          Updated the debugging messages (ACE_ERROR -> ACE_DEBUG).

        * tao/ZIOP/ZIOP_Stub.cpp:
          Corrected the corruption of the client-side policies that
          were being broadcast to the server. The first, highest, priority
          slot was being over-written with the policy and actual compression
          level being used, replacing another possiable compressor ID. This
          effectivly doubled-up on the found compressor ID in the list (if